--- a/README.Rmd
+++ b/README.Rmd
@@ -18,7 +18,11 @@ knitr::opts_chunk$set(
 <!-- badges: start -->
 <!-- badges: end -->
 
-The goal of pcdid is to ...
+pcdid implements factor-augmented difference-in-differences (DID) estimation. It is useful in situations where the user suspects that trends may be unparallel and/or stochastic among control and treated units. The data structure is similar to that in a DID setup.
+
+The estimation method is regression-based and can be considered as an extension of conventional DID regressions. pcdid also implements a parallel trend alpha test (based on an interactive effects structure) and a recursive procedure that determines the number of factors automatically.
+
+For further details, please see Chan and Kwok (2022) who developed the pcdid approach and the alpha test.
 
 ## Installation
 
@@ -30,19 +34,39 @@ devtools::install_github("adamwang15/pcdid")
 
 ## Example
 
-This is a basic example which shows you how to solve a common problem:
+This is a basic example which replicates Chan and Kwok (2022)
 
 ```{r example}
 library(pcdid)
 
-# replicates Chan, M. K., & Kwok, S. S. (2022)
 result <- pcdid(
   lncase ~ treated + treated_post + afdcben + unemp + empratio + mon_d2 + mon_d3 + mon_d4,
   index = c("state", "trend"),
   data = welfare,
   alpha = TRUE
 )
+```
 
-# mean-group estimates
+To access the mean-group estimates
+
+```{r}
 result$mg
+```
+
+To access the alpha test result
+
+```{r}
+result$alpha
+```
+
+To access list of treated unit estimates
+
+```{r}
+result$treated
+```
+
+To access list of control unit estimates
+
+```{r}
+result$control
 ```
